--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ img {
             <section class="home bd-grid" id="home">
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Nikhil</span><br> Web Developer</h1>
-                      <a href="nikhil_resume(5).pdf" class="button">View        Resume</a>
+                      <a href="https://nikhil9935.github.io/resume/" class="button">View        Resume</a>
 
                   
                 </div>
