--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ img {
                     <a href=" https://nikhil9935.github.io/Online-IDE-for-Web-Dev/" class="work__img">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEHugO9bZiWD9uJNiYWJ1Eb_UUzrhiPNWQQg&usqp=CAU" alt="">
                         <p>Online IDE for Web Dev</p></a>
-                    <a href="https://nikhil9935.github.io/my_web/" class="work__img">
+                    <a href="https://nikhil9935.github.io/weather_web_app.github.io/" class="work__img">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEcVmz_428Z4ed9U-w1mtsq3NBtGCF22NjiQ&usqp=CAU" alt="">
                      <br>   <p>Weather Web App</p> </a>
                     <a href="https://nikhil9935.github.io/donation.github.io/" class="work__img">
